# personal_site

./: .gitignore  Cargo.toml  async-tester.sh  config_example.json  dbdesign.txt
backend/: Cargo.toml
backend/src/: api.rs  authenticator.rs  base64.rs  config.rs  http.rs  main.rs  my_logger.rs  nodb.rs  note_db.rs  socket.rs  sqlite_db.rs
backend/src/http/: internal.rs  mod.rs  parser.rs  server.rs  types.rs
frontend/: hacker.txt  index.html  index.js  test.js
http/: Cargo.toml
http/src/: lib.rs  parser.rs  server.rs  socket.rs  types.rs
src/: main.rs
