[package]
name = "personal_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
log = "0.4.22"
nix = { version = "0.29.0", features = ["event", "poll"] }
serde_json = "1.0.133"
sqlite = "0.36.1"
